--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,40 @@
 ---
+name: Docker Image CI
+
+x-branches: &x-branches
+  branches:
+    - master
+    - main
+
 on:
-  - push
+  push:
+    <<: *x-branches
+  pull_request:
+    <<: *x-branches
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build alice-lg
+    name: Builds the alice-lg image
+
     steps:
-      - name: Build alice-lg alpine docker image
-        id: alpine_build
-        uses: actions/build@v1
+      - uses: actions/checkout@v2
+
+      - name: docker login
+        id: dockerhub_login
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.dockerhub_username }}
+          DOCKERHUB_PASSWORD: ${{ secrets.dockerhub_password }}
+        run: |
+          echo "::add-mask::$DOCKERHUB_USERNAME"
+          echo "::add-mask::$DOCKERHUB_PASSWORD"
+          docker login --username "$DOCKERHUB_USERNAME" --password "${DOCKERHUB_PASSWORD}"
+
+      - name: docker build
+        run: docker build -t timrabl/alice-lg:$(date %s) -f Dockerfile .
+
+      - name: docker push
+        run: docker push ${{ secrets.dockerhub_username }}/alice-lg
+
+
+
