--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,11 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.dockerhub_username }}
           DOCKERHUB_PASSWORD: ${{ secrets.dockerhub_password }}
         run: |
-          echo "::add-mask::$DOCKERHUB_USERNAME"
           echo "::add-mask::$DOCKERHUB_PASSWORD"
           docker login --username "$DOCKERHUB_USERNAME" --password "${DOCKERHUB_PASSWORD}"
 
       - name: docker build
-        run: docker build -t timrabl/alice-lg:$(date %s) -f Dockerfile .
+        run: docker build -t ${{ secrets.dockerhub_username }}/alice-lg:$(date %s) -f Dockerfile .
 
       - name: docker push
         run: docker push ${{ secrets.dockerhub_username }}/alice-lg
