--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.dockerhub_username }}
           DOCKERHUB_PASSWORD: ${{ secrets.dockerhub_password }}
         run: |
+          echo "::add-mask::$DOCKERHUB_USERNAME"
           echo "::add-mask::$DOCKERHUB_PASSWORD"
           docker login --username "$DOCKERHUB_USERNAME" --password "${DOCKERHUB_PASSWORD}"
 
